# saltctl

./: LICENSE  README.md  config.py  database.py  pubkey.gpg  pyproject.toml  pytest.ini  saltctl.conf.default  saltctl.py  setup.py
.github/workflows/: release.yml  test.yml
commands/: __init__.py  base.py  help.py  history.py  hosts.py  output.py  package.py  ping.py  push.py  qsp.py  select.py  status.py  systemctl.py
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-all/: Packages
dists/stable/main/binary-amd64/: Packages
dists/stable/main/binary-arm64/: Packages
pool/main/: saltctl.deb
tests/: conftest.py  test_config.py  test_database.py  test_saltctl.py
tests/commands/: test_history.py  test_output.py  test_package.py  test_push.py  test_select.py
